--- a/Example/ImageIOSwift.xcodeproj/xcshareddata/xcschemes/ImageIOSwift-Example.xcscheme
+++ b/Example/ImageIOSwift.xcodeproj/xcshareddata/xcschemes/ImageIOSwift-Example.xcscheme
@@ -70,11 +70,13 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      enableThreadSanitizer = "YES"
       language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      stopOnEveryThreadSanitizerIssue = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
