Tweak travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,11 @@
 
 osx_image: xcode9
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
 before_install:
 - gem install scan
-env:
-  - DEVICE="platform=iOS Simulator,name=iPhone 6,OS=9.3"
-  - DEVICE="platform=iOS Simulator,name=iPhone 6,OS=10.2"
-  - DEVICE="platform=iOS Simulator,name=iPhone 6,OS=11.0"
 script:
-- fastlane scan --workspace "Example/ImageIOSwift.xcworkspace" --scheme "ImageIOSwift-Example" -d "$DEVICE"
+- fastlane scan --workspace "Example/ImageIOSwift.xcworkspace" --scheme "ImageIOSwift-Example" -d "platform=iOS Simulator,name=iPhone 6,OS=9.3"
+- fastlane scan --workspace "Example/ImageIOSwift.xcworkspace" --scheme "ImageIOSwift-Example" -d "platform=iOS Simulator,name=iPhone 6,OS=10.2"
+- fastlane scan --workspace "Example/ImageIOSwift.xcworkspace" --scheme "ImageIOSwift-Example" -d "platform=iOS Simulator,name=iPhone 6,OS=11.0"
 - pod lib lint
 - carthage build --no-skip-current
