Move UIKit integration into it’s own target

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,6 +3,7 @@ use_frameworks!
 
 target 'ImageIOSwift_Example' do
   pod 'ImageIOSwift', :path => '../'
+  pod 'ImageIOUIKit', :path => '../'
 
   target 'ImageIOSwift_Tests' do
     inherit! :search_paths
