--- a/Example/ImageIOSwift.xcodeproj/xcshareddata/xcschemes/example-swiftui-watch.xcscheme
+++ b/Example/ImageIOSwift.xcodeproj/xcshareddata/xcschemes/example-swiftui-watch.xcscheme
@@ -54,10 +54,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/example-swiftui-ios">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7A946AA522DBD40700A6EBBD"
@@ -65,7 +63,7 @@
             BlueprintName = "example-swiftui-watch"
             ReferencedContainer = "container:ImageIOSwift.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -73,10 +71,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/example-swiftui-ios">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7A946AA522DBD40700A6EBBD"
@@ -84,16 +80,7 @@
             BlueprintName = "example-swiftui-watch"
             ReferencedContainer = "container:ImageIOSwift.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7A946AA522DBD40700A6EBBD"
-            BuildableName = "example-swiftui-watch.app"
-            BlueprintName = "example-swiftui-watch"
-            ReferencedContainer = "container:ImageIOSwift.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
